--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -18,7 +18,7 @@ overflow-x: hidden;
 body {
     overflow-x:hidden;
     // overflow: ;
-    // min-height: 100vh;
+    min-height: 100%;
     background-color: #dee1e6;
 }
 // :root,html,body,main{
