--- a/sass/components/_breakpoints.scss
+++ b/sass/components/_breakpoints.scss
@@ -10,7 +10,7 @@
 @media (max-width: 700px) {
 
   .algo-main {
-    grid-template-columns: .2fr 2fr;
+    grid-template-columns: .1fr 2fr;
   }
   .table-of-content-btn {
     background-color: #3687E8;
