--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,4 +2,7 @@
 .footer {
     padding-bottom: 5rem;
     background-color: #16103a !important;
+    position: relative !important;
+    top: 100%;
+    margin-top: 7rem !important;
 }
