--- a/sass/pages/_algorithms.scss
+++ b/sass/pages/_algorithms.scss
@@ -1,24 +1,29 @@
 
 .algo-main {
-    position: relative;
+    position: relative !important;
     width: 100%;
+    min-height: fit-content;
     top: calc(72px + 1rem);
-    min-height: 100%;
     display: grid;
-    height: 100vh;
     grid-template-columns: .2fr 1fr;
-    grid-template-rows: 0.3fr 1fr 1fr;
+    grid-template-rows: 0.1fr .1fr 1fr;    
     grid-template-areas:
         "title title"
         "content1 content1"
-        "content2 content2"
-        "content3 content3";
-
+        "content2 content2";
+    // outline: red dashed;
 }
 
 body.algo {
     background-color: #dee1e6;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    // align-items: center;
 }
+main.algo-main {
+    min-height: fit-content;}
 
 .offcanvas-mini {
     width: 100px;
@@ -102,10 +107,10 @@ body.algo {
 
 }
 
-.content3 {
-    grid-area: content3;
-    outline: dashed red;
-}
+// .content3 {
+//     grid-area: content3;
+//     outline: dashed red;
+// }
 
 
 
